# MT-AGNet

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  default.yaml  experiments.yaml  model.yaml  robustness.yaml  training.yaml
docs/: architecture_analysis.md  backbone_comparison.md  calibration.md  code_walkthrough.md  evaluation.md  execution_modes.md  experiment_plan.md  nonparametric_baselines.md  reproducibility.md  results.md
notebooks/: train_c_d_0b_0c_colab.ipynb  train_evaluate_colab.ipynb  train_evaluate_kaggle.ipynb  train_loss_balancing_diagnostic_colab.ipynb
scripts/: build_knn_index.py  calibrate.py  compare_backbones.py  download_kaggle_data.py  evaluate.py  evaluate_nonparametric_baselines.py  export_report.py  generate_architecture_report.py  generate_final_report.py  generate_gradcam.py  lock_split.py  prepare_data.py  pretrain.py  run_experiments.py  run_robustness.py  run_seeds.py  train.py  tune_nonparametric_baselines.py
src/: __init__.py
tests/: conftest.py  test_abstention_evaluation_only.py  test_adapters.py  test_architecture_analysis.py  test_artifact_directory_guard.py  test_backbone_comparison.py  test_backbone_comparison_report.py  test_calibration.py  test_compare_backbones.py  test_comparison.py  test_config.py  test_data_validation.py  test_evaluate_script.py  test_exp_0c_no_zero_init.py  test_final_report.py  test_kaggle_download.py  test_kaggle_drive_backup.py  test_knn.py  test_lock_split.py  test_losses.py  test_metrics.py  test_model.py  test_near_duplicate_audit.py  test_progress.py  (+22 more)
(+63 files in other folders)
